Fix T38467: Animation playback is not synchronized when Screen Layout changes

When both old and new screens share the same scene, "transfer" playback to new screen, else stop playback.